--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
     "socket.io-client": "2.4.0"
   },
   "devDependencies": {
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@tailwindcss/jit": "^0.1.18",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
+    "react-router-sitemap-generator": "^0.0.8",
     "tailwindcss": "^3.0.19",
     "vite": "^2.5.4"
   }
